--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Reactive Explorations
+#email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal site of Aleksandar Milošević. A lot of RxJava & RxJS samples, links and tutorials.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://amilosevic.github.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  amilosevic
 
 gems:
   - jekyll-gist
@@ -17,5 +14,5 @@ gems:
 markdown: kramdown
 
 collections:
- rx_tutorial:
+ tutorial:
   output: true
